--- a/views/basket.ejs
+++ b/views/basket.ejs
@@ -8,30 +8,33 @@
         * {
             padding: 0;
             margin: 0;
+
         }
+
         .wrap {
-            padding-top: 100px;
+            width: 100svw;
+            min-height: 50svh;
+            display: flex;
             justify-content: center;
             align-items: center;
         }
+
         .title {
             padding-bottom: 20px;
         }
+
         th {
             padding-right: 1rem;
+            padding-bottom: 10px;
         }
+
         .container{
-            width: 80%;
-            box-shadow: rgb(0 0 0 / 15%) 0px 8px 16px 0px;
-
-            text-align: center;
-
-        }
-        .thead{
-            height: 52px;
-            border-bottom: 1px solid #000000;
-            font-size: 16px;
-            vertical-align: middle;
+            width: 100svw;
+            height: 25svh;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
         }
 
 /* --- */
