--- a/views/index.ejs
+++ b/views/index.ejs
@@ -52,7 +52,7 @@
       <div class="container">
         <div class="orderManage"><a href="/orderSearch">주문관리</a></div>
 
-        <div class="ingredientManage"><a href="/supplyList">재고관리</a></div>
+        <div class="ingredientManage"><a href="/supplySearch">재고관리</a></div>
 
         <div class="manageLink"><a href="/manage">관리자페이지</a></div>
       </div>
