장바구니 선택주문 추가

--- a/views/manage.ejs
+++ b/views/manage.ejs
@@ -50,15 +50,12 @@
         <div class = "container">
             <h1>데이터를 추가하기 위한 페이지</h1>
 
-            <a href="/orderList">커피 담으러가기</a>
+            <a href="/orderList">커피 쇼핑하기</a>
 
-            <a href = "/basket">주문하기</a>
 
             <a href = "/menuAdd">커피 메뉴 추가</a>
 
-            <a href = "/ingredientAdd">재료 추가</a>
-
-            <a href = "/menuMake">메뉴에 사용되는 재료 항목 추가</a>
+            <a href = "/menuMake">재료 주문</a>
 
             <a href = "IngredientAdd">업체별 재료 및 재고량 추가</a>
 
