--- a/views/basket.ejs
+++ b/views/basket.ejs
@@ -60,10 +60,10 @@
 </thead>
 <tbody>
 
-    <% if(basket != undefined) { %>
+        <form action="/order" method="post">
         <% for(var i =0 ; i< basket.length ; i++) { %>
         <tr>
-        <!-- <th><input type = "checkbox" name = "check"  /> </th> -->
+        <th><input type = "checkbox" name = "check"  value = "<%= basket[i].menuNumber %>"/> </th>
         <th><%= basket[i].menuName %></th>
         <th><%= basket[i].count %></th>
         <th><%= Number(basket[i].count)*Number(basket[i].menuPrice) %></th>
@@ -71,16 +71,11 @@
 
         <% } %>
 
-        <% } %>
  
         <tr>
-            <th>합계 : <%= totalMoney  %></th>
-            <form action="/order" method="post">
-
-            <input type = "hidden" name = "totalMoney" value = "<%= totalMoney %> " />
             <th><button type = "submit" >주문하기</button></th>
-            </form>
         </tr>
+        </form>
 </tbody>
 </table>
 </div>
