--- a/views/supplySearch.ejs
+++ b/views/supplySearch.ejs
@@ -46,7 +46,7 @@
         <div class = "container">
             <form action = "/supplySearch" method="post">
 
-            <input type = "text" placeholder="관리자 아이디 입력"/>
+            <input type = "text" name = "customerId" placeholder="관리자 아이디 입력"/>
             <button type = "submit">조회</button>
             </form>
 
