--- a/views/manage.ejs
+++ b/views/manage.ejs
@@ -55,14 +55,14 @@
 
             <a href = "/menuAdd">커피 메뉴 추가</a>
 
-            <a href = "/menuMake">재료 주문</a>
+            <!-- <a href = "/menuMake">재료 주문</a> -->
+            <a href = "/recipe">레시피 추가</a>
 
-            <a href = "IngredientAdd">업체별 재료 및 재고량 추가</a>
+            <a href = "/IngredientAdd">업체별 재료 및 재고량 추가</a>
 
         </div>
 </div>
 
-</div>
 
 
 </body>
