--- a/views/supplyList.ejs
+++ b/views/supplyList.ejs
@@ -29,11 +29,17 @@
         th {
             padding-right: 10px;
         }
+        h1{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
     </style>
 </head>
 
 <body>
     <div class="wrap">
+                    <h1>재고 조회</h1>
         <div class="container">
             <table>
                 <thead>
@@ -42,7 +48,6 @@
                         <th scope="col" class="thead"> 재고량 </th>
                         <th scope="col" class="thead"> 업체명 </th>
                         <th scope="col" class="thead"> 재료가격 </th>
-                        <th scope="col" class="thead"> 배달일 </th>
                     </tr>
                 </thead>
                 <tbody>
@@ -52,7 +57,6 @@
                         <th><%= supply[i].ingredientCount %></th>
                         <th><%= supply[i].SupplyName %></th>
                         <th><%= supply[i].ingredientPrice %></th>
-                        <th><%= supply[i].deliveryDate %></th>
                     </tr>
                     <% } %>
                 </tbody>
