--- a/views/card.ejs
+++ b/views/card.ejs
@@ -104,7 +104,9 @@
 </style>
 
 <div class="card">
-  <div class="image"></div>
+  <div class="image">
+    <h1><%= temp[i].starMenu %></h1>
+  </div>
 
   <div class="content"></div>
 
