--- a/views/coffeeDetail.ejs
+++ b/views/coffeeDetail.ejs
@@ -133,7 +133,7 @@
 
                     <tr>
                         <th>재료이름</th>
-                        <th>재료양</th>
+                        <th>필요한 양</th>
                     </tr>
                 </thead>
                 <tbody>
