--- a/views/index.ejs
+++ b/views/index.ejs
@@ -55,6 +55,12 @@
         <div class="ingredientManage"><a href="/supplySearch">재고관리</a></div>
 
         <div class="manageLink"><a href="/manage">관리자페이지</a></div>
+
+        <a href="/orderList">커피 쇼핑하기</a>
+
+        <a href="/recipe">레시피 추가</a>
+
+        <a href="/IngredientAdd">업체별 재료 및 재고량 추가</a>
       </div>
     </div>
   </body>
