--- a/views/card.ejs
+++ b/views/card.ejs
@@ -104,9 +104,7 @@
 </style>
 
 <div class="card">
-  <div class="image">
-    <h1><%= temp[i].starMenu %></h1>
-  </div>
+  <div class="image"><%= starMenu[i].starMenu %></div>
 
   <div class="content"></div>
 
