--- a/views/manage.ejs
+++ b/views/manage.ejs
@@ -1,70 +1,50 @@
-
 <!DOCTYPE html>
-<head>
-<style>
-    /* css */
-
-    * {
-
-        padding:0;
-        margin:0;
-        padding-bottom: 10px;
-
-    }
-
-    .wrap{
+<html>
+  <head>
+    <style>
+      .wrap {
         width: 100svw;
         min-height: 100svh;
-        display: flex;
-        justify-content: center;
         align-items: center;
-    }
-
-    .container{
+        justify-content: center;
+      }
+      .container {
         width: 100svw;
-        min-height: 50svh;
+        min-height: 25svh;
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: center;
-    }
+      }
 
-    p{
+      a {
         padding-bottom: 10px;
-    }
+      }
+    </style>
+  </head>
+  <body>
+    <div class="wrap">
+      <div class="container">
+        <form action="/starMenu/update" method="post">
+          <% for(var i = 0; i < starMenu.length; i++) { %>
+          <input
+            type="hidden"
+            name="menuNumber"
+            value="<%= starMenu[i].menuNumber %>"
+          />
 
-    a{
-        text-decoration: none;
-        color: black;
-    }
+          <input type="text" value="<%= starMenu[i].menuName %>" />
 
+          <% if (starMenu[i].starMenu == "0") { %>
 
-</style>
-</head>
+          <input type="text" name="starMenu" value="" />
 
-<body>
+          <% }else { %>
 
-  <div class="wrap">
-
-
-        <div class = "container">
-            <h1>데이터를 추가하기 위한 페이지</h1>
-
-            <a href="/orderList">커피 쇼핑하기</a>
-
-
-            <a href = "/menuAdd">커피 메뉴 추가</a>
-
-            <!-- <a href = "/menuMake">재료 주문</a> -->
-            <a href = "/recipe">레시피 추가</a>
-
-            <a href = "/IngredientAdd">업체별 재료 및 재고량 추가</a>
-
-        </div>
-</div>
-
-
-
-</body>
-
+          <input type="text" name="starMenu" value="추천메뉴" />
+          <% } %> <% } %>
+          <button type="submit">제출</button>
+        </form>
+      </div>
+    </div>
+  </body>
 </html>
