--- a/views/orderList.ejs
+++ b/views/orderList.ejs
@@ -50,6 +50,7 @@
 
             <tbody>
                 <% for(var i =0; i< data.length; i++ ){ %>
+
                 <tr>
                     <th>
                         <%= data[i].orderId %>
@@ -75,6 +76,9 @@
                    
                     <th>
                         <%= data[i].customer_customerName %>
+                    </th>
+                    <th>
+                        <button type="submit">재주문</button>
                     </th>
                 </tr>
                 <% } %>
