--- a/views/order.ejs
+++ b/views/order.ejs
@@ -78,6 +78,12 @@
         <button type = "submit">주문하기</button>
 
         </form>
+
+        <h4>주문 총액</h4>
+        <%= resultMoney %>
+
+        <h3>할인 금액</h3>
+        <%= disMoney %>
     </div>
 
 
